[gd_scene load_steps=11 format=2]

[ext_resource path="res://Enemies/Mushroom/Run (32x32).png" type="Texture" id=1]
[ext_resource path="res://Enemies/Mushroom/Idle (32x32).png" type="Texture" id=2]
[ext_resource path="res://Enemies/Mushroom/Hit.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Mushroom.gd" type="Script" id=4]
[ext_resource path="res://Prefabs/HitBox.tscn" type="PackedScene" id=5]

[sub_resource type="CapsuleShape2D" id=6]
radius = 5.47879
height = 19.7348

[sub_resource type="Animation" id=4]
resource_name = "Hit"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("texture:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("texture:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Idle"
length = 2.8
tracks/0/type = "value"
tracks/0/path = NodePath("texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("texture:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 14 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("texture:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13 ]
}

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}

[sub_resource type="Animation" id=2]
resource_name = "Run"
length = 1.47
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("texture:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 16 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("texture:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15 ]
}

[node name="Mushroom" type="KinematicBody2D"]
position = Vector2( 0, -16 )
collision_layer = 2
collision_mask = 9
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1.00227, 9.61362 )
rotation = 1.5718
shape = SubResource( 6 )

[node name="anim" type="AnimationPlayer" parent="."]
autoplay = "Run"
anims/Hit = SubResource( 4 )
anims/Idle = SubResource( 5 )
anims/RESET = SubResource( 1 )
anims/Run = SubResource( 2 )

[node name="texture" type="Sprite" parent="."]
texture = ExtResource( 3 )
hframes = 5
frame = 1

[node name="RayWall" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -16, 0 )
collision_mask = 8

[node name="HitBox" parent="." instance=ExtResource( 5 )]
modulate = Color( 0.639216, 0.843137, 0, 1 )
position = Vector2( 0.0834274, -3.33709 )
scale = Vector2( 0.96, 1 )

[node name="Collision" parent="HitBox" index="0"]
visible = false
position = Vector2( -0.296796, 0 )

[connection signal="animation_finished" from="anim" to="." method="_on_anim_animation_finished"]
[connection signal="body_entered" from="HitBox" to="." method="_on_HitBox_body_entered"]

[editable path="HitBox"]
